fixed css spacing/margin issues

--- a/src/components/AuditProjects/AuditProjects.css
+++ b/src/components/AuditProjects/AuditProjects.css
@@ -4,10 +4,11 @@
     display:flex;
     flex-direction: column;
     align-items:center;
-    background-color: #d2cecc;}
+    background-color: #d2cecc;
+    
+}
 .projectList{
 /* position:fixed; */
-top:15vh;
 display:flex;
 flex-direction: column;
 justify-content:flex-start;
