--- a/src/components/CreateUserForm/CreateUserForm.css
+++ b/src/components/CreateUserForm/CreateUserForm.css
@@ -1,6 +1,9 @@
 .createUser{
+    margin-top: 10vh;
     display:flex;
     flex-direction: column;
-    width:400px;
+    width:100%;
+    height:100%;
     align-items: center;
+    
 }
