--- a/src/pages/UserDashboardPage/UserDashboardPage.css
+++ b/src/pages/UserDashboardPage/UserDashboardPage.css
@@ -3,8 +3,9 @@
     flex-direction:column;
     align-items:center;
     position:relative;
-    height:100%;
+    height:100vh;
     width:100%;
+    /* top:10vh */
    
 }
 .headerNav{
